--- a/IEEEtran/bibliography.bib
+++ b/IEEEtran/bibliography.bib
@@ -94,3 +94,10 @@ author={U. Hoffmann},
 title={Zur visuellen Umfeldwahrnehmung autonomer Fahrzeuge},
 year={2004}
 }
+
+@article{lanesystem,
+author={Daniel Töpfer and Jens Spehr and Jan Effertz and Christoph Stiller},
+title={Efficient Road Scene Understanding for Intelligent Vehicles Using Compositional Hierarchical Models},
+year = {2015},
+journal = {IEEE Transactions On Intelligent Transportation Systems, fol. 16, no. 1}
+}
